# DataEngineering_UCM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Pipfile  README.md
Ejercicios/: README.md  build.sbt
Ingestion/: requirements.txt  setup.py
Ingestion/ingestion_engine/: README.md  ingestion_engine.py
Ingestion/ingestion_engine/utils/: autoloader.py  image.py  metadata.py
Ingestion/utils/: autoloader.py  image.py
JourneyPlanner/src/main/scala/com/ntic/clases/planner/: JourneyPlanner.scala  Station.scala  Time.scala  Train.scala
NoSQL/: tarea_JavierBerensteinRey.ipynb
Practica/: README.md
Practica/EMT/: objects.py
Practica/tests/: test_bici_mad.py
Practica/tests/data/: sample_data.csv
Python/log_reader/: exceptions.py  logReader.py
Python/python_emt_project/: consultas.ipynb  enunciado.ipynb  pyproject.toml
Python/python_emt_project/EMT/: helper.py
Python/python_emt_project/tests/: run_tests.py
Python/python_emt_project/tests/data/: html_url_emt_response.txt  invalid_csv.csv
Scala/Ejercicios/src/main/scala/: Clases-Objetos-Herencia.sc  Colecciones.sc
Scala/Entregable/: Documentation.csv  Term.csv  build.sbt
Scala/Entregable/src/main/resources/: application.conf
Scala/Entregable/src/main/scala/org/ntic/entregable/: AirportInfo.scala  FileUtils.scala  Time.scala  (+4 more)
Scala/Entregable/src/test/scala/: FileUtilsTest.scala  FlightDateTest.scala  TimeTest.scala
Scala/JourneyPlanner/: build.sbt
log_reader/: README.md  exceptions.py  logReader.py  main.py
python_emt_project/: consultas.ipynb
python_emt_project/tests/: test_url_emt.py
(+1 files in other folders)
