[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
name = "EMT"
version = "1.0.0"
description = "Academic package for EMT data handling"
requires-python = ">=3.11"
readme = "README.md"
license = {file = 'gpl-3.0.txt'}
authors = [
	{name = 'Javier Berenstein Rey', email = 'javier.berenstein@gmail.com'},
]

dependencies = [ "requests ~= 2.31",
	"pandas ~= 2.1" ]

[project.optional-dependencies] 
    dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

